# Ceiling.io

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/: AGENTS.md
.github/skills/: cpp20.md  docker.md
include/: AnalysisWorker.h  JobModels.h  JobStore.h  MainComponent.h  MasterJob.h  WebhookDispatcher.h  ceilingIOPipeline.h
include/Server/: JobModels.h
include/Shared/: MainAudioProcessor.h
src/: AnalysisWorker.cpp  LocalMixeaPipeline.cpp  Main.cpp  MainAudioProcessor.cpp  MainCli.cpp  MainComponent.cpp  MainWindow.cpp  ceilingIOPipeline.cpp
src/Cli/: MainCli.cpp
src/Server/: JobStore.cpp  MainServer.cpp
src/Shared/: MainAudioProcessor.cpp
src/server/: JobStore.cpp  MainServer.cpp  MasterJob.cpp  WebhookDispatcher.cpp
